# fast-api-learning

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
hello-world/: main.py
hello_world/: __init__.py  main.py
hello_world/tests/: test_main.py
week1_day1/app/: __init__.py  main.py
week1_day1/tests/: conftest.py  test_health.py
week1_day2/app/: main.py
week1_day2/tests/: test_params.py
