[project]
name = "fastapi-hello"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "pydantic[email]",
  "httpx>=0.28.1",
  "pydantic-settings>=2.10.1",
]

[dependency-groups]
dev = [
  "ruff",
  "black",
  "pre-commit",
  "pytest",
  "httpx",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "I001"]
target-version = "py312"
